# bencode2json

./: .gitignore  Cargo.toml  README  README.md  project-words.txt
.github/workflows/: contract.yaml  coverage.yaml  generate_coverage_pr.yaml  upload_coverage_pr.yaml
contrib/: be2json.c
examples/: parser_file_in_file_out.rs  parser_stdin_stdout.rs  parser_string_in_string_out.rs  parser_string_in_vec_out.rs  parser_vec_in_string_out.rs  parser_vec_in_vec_out.rs  try_bencode_to_json.rs
src/: error.rs  lib.rs  main.rs  test.rs
src/generators/: json.rs  mod.rs  stack.rs
src/parsers/: error.rs  integer.rs  mod.rs  stack.rs  string.rs  tokenizer.rs
src/parsers/generators/: json.rs  mod.rs  stack.rs
src/parsers/tokenizer/: integer.rs  mod.rs  string.rs
src/rw/: byte_reader.rs  byte_writer.rs  error.rs  mod.rs  string_writer.rs  writer.rs
src/tokenizer/: integer.rs  mod.rs  string.rs
tests/: integration.rs
tests/fixtures/: sample.bencode
