[package]
edition = "2021"
name = "torrust-bencode2json"
version = "0.1.0"

[workspace]
members = ["examples/*"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "1.0", features = ["display"] }
hex = "0.4"
ringbuffer = { version = "0.15.0", features = ["alloc"] }
serde_json = "1.0.128"
thiserror = "1.0.64"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.2"
tempfile = "3.13.0"
