[package]
authors = ["Jose Celano <josecelano@gmail.com>", "Cameron Garnham <me@da2ce7.com>"]
description = "A Bencoded to JSON converter library and console app with no intermediary in-memory structure."
edition = "2021"
exclude = [".*", "cSpell.json", "rustfmt.toml"]
license = "LGPL-3.0"
name = "bencode2json"
repository = "https://github.com/torrust/bencode2json"
version = "0.1.0"

[workspace]
members = ["examples/*"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
derive_more = { version = "1.0", features = ["display"] }
hex = "0.4"
ringbuffer = { version = "0.15.0", features = ["alloc"] }
serde_json = "1.0.128"
thiserror = "1.0.64"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.2"
tempfile = "3.13.0"
